Fix padding on mobile sidebar

--- a/src/css/modules/grid-layout.css
+++ b/src/css/modules/grid-layout.css
@@ -49,7 +49,7 @@ main {
     max-height: calc(100% - var(--ui-height));
     width: 100%;
     gap: .5em;
-    padding: 0 .75em .7em .75em;
+    padding: 0 .5em .5em .5em;
     background-color: var(--lighter);
 }
 
@@ -165,7 +165,7 @@ h6 > a {
     #_sidebar-mobile {
         left: var(--sidebar-left-width);
         width: calc(100% - var(--sidebar-left-width));   
-        padding: .75em;
+        padding: .5em;
     }
 }
 
